寒假期间的更新

--- a/前端手写代码.md
+++ b/前端手写代码.md
@@ -1,4 +1,4 @@
-# 手写instance
+# instance
 
 ```js
 //判断A是否是B的实例
@@ -18,3 +18,49 @@ instanceof([],Object)//true
 instanceof(1,Number)//true
 ```
 
+#  call/apply/bind
+
+```javascript
+//手写call
+Function.prototype.myCall = function(context,...args){
+    //Step1:把函数挂载到目标对象上（这里的this就是我们要改造的那个函数）
+    context = (context === udefined || context === null)?window:content;
+    context.func = this
+    //Step2：执行函数,利用扩展运算符将数组展开
+    let result = context.func(...args);
+    //Step3 删除step1中挂到目标对象上的函数，
+    delete context.func;
+    return result;
+}
+```
+
+```javascript
+//手写apply
+Function.prototype.myApply = function(content){
+ content = (content === undefined || content === null)?window:content;
+ content.fn = this;
+ let result = argumnets[1]? content.fn(...arguments[1]) : content.fn();
+ delete content.fn;
+ return result;
+} 
+```
+
+```js
+//手写bind，思路:通过apply或call方法来实现
+Function.prototype.myBind = function(){
+    //将参数解析为数组
+    const args = Array.prototype.slice.call(arguments);
+    //获取this（取出数组第一项，数组剩余的就是传递的参数）
+    const t = args.shift();
+    const self = this //当前函数
+    //返回一个函数
+    return function(){
+        //执行原函数。并返回结果
+        return self.apply(t,args)
+    }
+}
+```
+
+备注：
+
+* 
