--- a/前端框架及项目面试.md
+++ b/前端框架及项目面试.md
@@ -731,7 +731,7 @@ export default {
             event.$emit('onAddTitle', this.title)
 ```
 
-##  3-6 vue父子组件生命周期调用顺序
+##  3-6 vue生命周期
 
 > 生命周期（单个组件)
 >
@@ -739,23 +739,21 @@ export default {
 > * 更新阶段
 > * 销毁阶段
 
-### Vue生命周期
-
-生命周期，就是指实例从创建到销毁的过程
-
-![image-20210207000246402](D:\Users\Documents\[note]前端笔记\前端框架及项目面试.assets\image-20210207000246402.png)
-
-
+### （一）Vue生命周期
 
 参考博客：https://www.jianshu.com/p/410b6099be69
 
 <img src="https://upload-images.jianshu.io/upload_images/13119812-5890a846b6efa045.png?imageMogr2/auto-orient/strip|imageView2/2/w/1200/format/webp" alt="img" style="zoom: 50%;" />
 
+**生命周期，就是指实例从创建到销毁的过程**
+
+<img src=".\前端框架及项目面试.assets\image-20210207000246402.png" alt="image-20210207000246402" style="zoom:67%;" />
+
 ### **created和mounted有什么区别？**
 
-* ### created是初始化vue实例，并没有开始渲染
+* **created是初始化vue实例，并没有开始渲染**
 
-* mounted是组件在网页上真正绘制渲染完了，大部分情况在mounted里面进行操作，因为页面已经渲染完了，可以通过ajax获取信息，绑定事件等等
+* **mounted是组件在网页上真正绘制渲染完了**，大部分情况在mounted里面进行操作，因为页面已经渲染完了，可以通过ajax获取信息，绑定事件等等
 
 ### **何时需要beforeDestory？**
 
@@ -766,16 +764,19 @@ export default {
 
 （参考vue官网试图）
 
-### 父子组件的生命周期
+###  （二）父子组件生命周期调用顺序
 
 先补充一个例子：
 
+```html
 <template>
   <div class="app-content" v-show="rendered">
     content
   </div>
 </template>
+```
 
+```js
 <script>
 export default {
   data(){
@@ -812,8 +813,10 @@ export default {
   }
 }
 </script>
+```
 
-![image-20201204105336830](D:\Users\Documents\[note]前端笔记\前端框架及项目面试.assets\image-20201204105336830.png)
+
+![image-20201204105336830](前端框架及项目面试.assets\image-20201204105336830.png)
 
 <img src="img/image-20201204110153052-1608020249953.png" alt="image-20201204110153052" style="zoom:50%;" />
 
@@ -958,8 +961,6 @@ export default {
 
 
 
-# 第3章 Vue高级特性
-
 ##  3-7 面试会考察哪些vue高级特性
 
 **Vue高级特性**
@@ -1058,9 +1059,8 @@ export default {
 
 > **$nextTick**
 >
-> * vue是异步渲染（原理部分会详细讲解）
+> * vue是异步渲染(原理部分会详细讲解）
 > * vue的data改变之后，DOM不会立刻渲染
->   * **一个重要概念：异步更新队列**：Vue在观察到数据变化时并不直接更新DOM，而是开启一个队列，并缓冲在同一事件循环中发生的所有数据改变，在缓冲时会去除重复数据，从而避免比不要的计算和DOM操作。然后，在下一个事件循环tick中，Vue刷新队列并执行实际（已去重的）工作。 
 > * `$nextTick`会在DOM渲染之后被触发，以获取最新DOM节点
 
 index.vue
@@ -1092,7 +1092,6 @@ NextTick.vue
     </div>
   </div>
 </template>
-
 <script>
 export default {
   name: "app",
@@ -1120,7 +1119,7 @@ export default {
 </script>
 ```
 
-## 3-10 slot是什么
+## 3-10 slot
 
 > **slot**
 >
@@ -1131,7 +1130,7 @@ export default {
 >   * slot分发的内容，作用域实在父组件上
 > * 具名插槽
 
-**基本使用**
+**1. 基本使用**
 
 slotDemo.vue
 
@@ -1271,7 +1270,7 @@ export default {
 
 <img src="img/image-20201204172226032.png" alt="image-20201204172226032" style="zoom: 80%;" />
 
-##  3-11 vue动态组件是什么——:is="component-name"
+##  3-11 vue动态组件——:is="component-name"
 
 > **动态组件**
 >
@@ -1619,49 +1618,78 @@ export default {
 * 路由模式（hash、H5 history）
 * 路由配置（动态路由、懒加载）
 
-### **Vue-router路由模式**
+### （一）**Vue-router路由模式**
 
-* hash模式(默认)：使用URL hash值来作路由，如http://abc.com/#/user/10，支持所有浏览器。
-* H5 history模式：需要HTML5 History API和server端配置结合，如http://abc.com/user/20，不支持低版本浏览器。
-* abstract：支持所有JS运行环境，如果当前环境没有浏览器API，路由会自动进入这个模式。
+* **hash**模式(默认)：使用URL hash值来作路由，如http://abc.com/#/user/10，支持所有浏览器。
+* **H5 history**模式：需要HTML5 History API和server端配置结合，如http://abc.com/user/20，不支持低版本浏览器。
+* **abstract**：支持所有JS运行环境，如果当前环境没有浏览器API，路由会自动进入这个模式。
 
-<img src="img/image-20201204205207157.png" alt="image-20201204205207157" style="zoom:67%;" />
+<img src="img/image-20201204205207157.png" alt="image-20201204205207157" style="zoom: 50%;" />
 
-<img src="img/image-20201204205237289.png" alt="image-20201204205237289" style="zoom:67%;" />
+<img src="img/image-20201204205237289.png" alt="image-20201204205237289" style="zoom: 50%;" />
 
-<img src="img/image-20201204205337975.png" alt="image-20201204205337975" style="zoom:67%;" />
+<img src="img/image-20201204205337975.png" alt="image-20201204205337975" style="zoom: 67%;" />
 
-### 说说对前端路由的理解
+### （二）说说对前端路由的理解
+
+**背景：**
+
+* *SPA**（单页面应用）：使用ajax极大提升了用户体验，允许页面在不刷新的情况下更新页面内容。
+* 前端路由为SPA中的各个视图匹配一个唯一标识。
+
+**前端路由 -—— SPA“定位”解决方案**：
+
+**前端路由解决思路：**
+
+* 拦截用户的刷新操作，避免服务端盲目相应，把刷新这个动作完全放到前端逻辑里消化掉。
+* 感知URL的变化。
 
 两个实践：hash与history
 
-**一、hash模式**
+**1、hash模式**
 
 hash模式是指通过改变URL后面以‘#’分割的字符串（这货其实就是URL上的哈希值）、从而让页面感知到路由变化的一种实现方式。
 
-**二、history模式**
+```js
+https://www.imooc.com/#/index 
+```
 
-通过 `forward() back() go()`等实现跳转动作，`pushState replaceState`
+JS可以捕获到哈希值的内容，hash模式下，实现路由的思路
+
+1. *hash的改变*：可以通过location暴露出来的属性，直接去修改当前URL的hash值
+
+   ```js
+   window.location.hash = 'index'
+   ```
+
+2. *hash的感知*：通过监听“hashchange"事件
+
+   ```js
+   //监听hash变化，点击浏览器的前进后退会触发
+   window.addEventListener('haschange',function(event){
+       //根据hash的变化更新内容
+   },false)
+   ```
+
+**2、history模式**
+
+HTML4：通过 `forward() back() go()`等实现跳转动作
+
+HTML5：`pushState replaceState` `popstate`
+
+* **pushState**：向浏览历史中追加一条记录 `history.pushState(data,[title],[url])`
+* **replaceState**：修改（替换）当前页在浏览历史中的信息
+* **popstate**：每当浏览历史发生变化，popstate事件都会被触发
+
+**注意：上述 historyAPI均不会导致页面的刷新**
+
+**坑：**go forawrd back等方法调用会触发popstate，单数pushState和replaceState不会，*如何解决？通过自定义事件和全局事件总线来实现*
 
 > Vuex Vue-router总结
 >
 > * 面试考点并不多（前提是熟悉Vue）
 > * 掌握基本概念，基本使用
 > * 面试官时间有限，需考察最核心、最常用的问题，而非边角问题
-
-## 3-18 vue使用-考点总结和复习
-
-**Vue使用 - 总结**
-
-* 基本使用
-* 高级特性
-* Vuex和Vue-router使用
-
-**接下来**
-
-* 有些题目会了，有些题目还不会
-* 不会的，设计了Vue原理，后面马上介绍
-* 后面还有很多Vue题目来等待你回答，不要学完了就忘掉
 
 # 第4章 Vue 原理
 
@@ -1706,23 +1734,63 @@ hash模式是指通过改变URL后面以‘#’分割的字符串（这货其实
 
 **Vue MVVM（Model-view-viewModel）**
 
-MVVM模型的关键：View的变化会直接映射在ViewModel中，这个映射的过程不需要手动实现，而是MVVM框架来做。
+**背景：**MVVM是一种架构模式，传统MVC导致的前端逻辑冗余问题，本质原因是Model->View可以直接通信，导致前端承载了过多的Model加工处理逻辑。在MVVM中就不存在这种问题
 
-<img src="D:\Users\Documents\[note]前端笔记\前端框架及项目面试.assets\image-20210207001528127.png" alt="image-20210207001528127" style="zoom:50%;" />
+<img src=".\前端框架及项目面试.assets\image-20210207001528127.png" alt="image-20210207001528127" style="zoom:50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端框架及项目面试.assets\image-20210207001631359.png" alt="image-20210207001631359" style="zoom:80%;" />
+<img src=".\前端框架及项目面试.assets\image-20210207001631359.png" alt="image-20210207001631359" style="zoom:80%;" />
 
+**MVVM模型的关键**：View的变化会直接映射在ViewModel中，这个映射的过程不需要手动实现，而是MVVM框架来做。
 
+## 4-3 Vue响应式原理机制（数据双向绑定）
 
-## 4-3 监听data变化的核心API是什么
+<img src="前端框架及项目面试.assets/image-20210209144331642.png" alt="image-20210209144331642" style="zoom:43%;" />
+
+**Vue会对传入的data做处理：**为一个属性添加getter和setter。在这个过程中，涉及到了**Object.defineProperty**这个方法。
+
+**每一个Vue组件实例，都对应着一个watcher实例**：这个watcher实例一直跟踪者data
+
+**render函数的执行依赖于数据的读取**，因此渲染时必定会读取data属性进而触发其对应的**getter**方法。getter方法被调用后，会通知watcher，watcher会把这些getter方法被触发的属性记录为”依赖“ —— 这就是**”依赖收集“**。
+
+如果data发生了更新，也就是被”写“了，此时对应属性的**setter**方法就会被触发。setter也会通知watcher，告诉它”我改变了“。watcher拿到消息后，告诉render”data变了“，由此去触发一个**re-render**的过程、与数据更新相关的组件会重新渲染。
+
+### （一）响应式原理相关源码知识
+
+==**1. Obect.defineProperty**==
+
+<img src="前端框架及项目面试.assets/image-20210209145915168.png" alt="image-20210209145915168" style="zoom:80%;" />
+
+==**2. Observer、Dep和watcher的关系**==
+
+* **Observer**：处理data ，给data安装getter和setter，这些安装上的逻辑会联动Dep去完成依赖收集和更新的派发
+* **Dep**：实际通知Watcher的人。在getter和setter逻辑中，通过调度Dep来完成信息的收集、和Watcher间的通信
+* **Watcher**：Watcher被通知之后，就会通知render，进而触发重渲染了。
+
+==**3. Observer**==
+
+**Observer的作用是遍历所有的属性，给它们安上getter/setter方法**
+
+![image-20210209150813995](前端框架及项目面试.assets/image-20210209150813995.png)
+
+**Dep**
+
+Dep是Watcher和Observer之间的“通信兵”。
+
+<img src="前端框架及项目面试.assets/image-20210209151253639.png" alt="image-20210209151253639" style="zoom: 67%;" />
+
+**Watcher**
+
+<img src="前端框架及项目面试.assets/image-20210209151326346.png" alt="image-20210209151326346" style="zoom: 50%;" />
+
+**总的来说：本质都是建立起dep和watcher间的关联，达到dep发生变化后可以立刻通知到watcher的目的。**
+
+### （二）监听data变化的核心API是什么 —— Object.defineProperty
 
 **Vue响应式**
 
 * 组件data的数据一旦变化，立刻触发视图的更新
 * 实现数据驱动的第一步
 * 考察Vue原理的第一题 
-
-**Vue响应式**
 
 * 核心API - Object.defineProperty
 * 如何实现响应式，代码演示
@@ -1734,8 +1802,6 @@ MVVM模型的关键：View的变化会直接映射在ViewModel中，这个映射
 * Vue2.x还会存在一段时间，所以都得学
 * Vue3.0相关知识，下一章将，这里先提一下
 
-
-
 > Object.defineProperty实现响应式
 >
 > * 监听对象，监听数组
@@ -1744,6 +1810,41 @@ MVVM模型的关键：View的变化会直接映射在ViewModel中，这个映射
 >   * 深度监听，需要递归到底，一次性计算量大
 >   * 无法监听新增属性/删除属性(Vue.set Vue.delete)
 >   * 无法原生监听数组，需要特殊处理
+
+### （三）原生js模拟双向数据绑定
+
+脱离MVVM的框架，实现数据的双向绑定
+
+https://www.jianshu.com/p/6e96afee3d61
+
+![image-20210225210046538](前端框架及项目面试.assets/image-20210225210046538.png)
+
+```js
+//获取需要监听的对象
+var inputObj = docuement.getElementById('userName');
+//获取展示监听对象的输入框
+//var showObj = document.getElementById('userNameTo');
+//当失去焦点时进行值的获取
+inputObj.addEventListener('blur',modelToView);
+//定义一个没有原型链的空对象
+var model = new Object(null);
+//**核心数据绑定函数**
+Object.defineProperty(model,'user',{
+    set:function(value){
+        user = value;
+        //showObj.value = value;//赋值给显示输入框
+    },
+    get:function(){
+        return user;
+    }
+})
+
+//数据变化
+function modelToView(){
+    //改变属性值
+    model['user'] = inputObj.value
+}
+```
 
 
 
@@ -1899,19 +2000,48 @@ MVVM模型的关键：View的变化会直接映射在ViewModel中，这个映射
 
 ![image-20201208150234728](img/image-20201208150234728.png)
 
-## 4-19 vue组件是异步渲染的
+##  4-19 Vue异步更新策略
 
-> **异步渲染**
+前言：nextTick是Vue异步更新策略的核心，同时涉及到Event-Loop这样的优质考点。
+
+### **（一）Vue组件是异步渲染的**
+
+假如触发这样一个事件:
+
+```js
+methods:{
+	update(){
+		for(let i=0;i<10;i++){
+            this.testNum = this.testNum+1;
+        }
+	}
+}
+```
+
+在Vue视图中，testNum会发生变化，不过虽然把testNum循环修改了10次，实际上只会把最后一次的值更新到试图上**（也就是汇总data的修改、一次性更新视图）**，从而节省不必要的性能开销**（减少DOM操作次数，提高性能）**
+
+> **一个重要概念：异步更新队列**：Vue在观察到数据变化时并不直接更新DOM，而是开启一个队列，并缓冲在同一事件循环中发生的所有数据改变，在缓冲时会去除重复数据，从而避免比不要的计算和DOM操作。然后，在下一个事件循环tick中，Vue刷新队列并执行实际（已去重的）工作。 
+
+**解释：**当数据更新发生时，他不会立刻给你执行视图层的更新动作，而是先把这个更新给“存起来”，等到“时机成熟”再去执行它；这个“存起来”的地方，就叫做异步更新队列。
+
+### **（二） Vue-nextTick源码概览**
+
+前言：Vue并没有自己实现和维护一套异步队列逻辑，而是完全依赖于浏览器暴露的API接口来实现异步任务的派发。
+
+nextTick是Vue异步更新策略的核心。，vuenextTick源码在vue/src/core/util/next-tick.js里
+
+* calbacks - 异步个更新队列
+* pending - “锁”
+* timerFunc - 异步任务的派发函数
+  * timerFunc中有四种派发方式：promise.then、MutationObverser、setImmediate、setTimeout四种
+  * 优先派发micro-task，次选macro-task
+  * micro-task是一队一队来更新，而macro-task是一个一个来更新
+
+> **总结1**
 >
-> * 回顾`$nextTick`
-> * 汇总data的修改、一次性更新视图
-> * 减少DOM操作次数，提高性能
-
-**总结1**
-
-* 渲染和响应式的关系
-* 渲染和模板编译的关系
-* 渲染和vdom的关系
+> * 渲染和响应式的关系
+> * 渲染和模板编译的关系
+> * 渲染和vdom的关系
 
 ## 4-20 如何用JS实现hash路由
 
@@ -1989,6 +2119,8 @@ MVVM模型的关键：View的变化会直接映射在ViewModel中，这个映射
 ![image-20201208154839873](img/image-20201208154839873.png)
 
 ## 6 双向数据绑定v-model的实现原理
+
+备注：配合MVVM回答
 
 > vue利用`v-model`来实现数据的双向绑定。**v-model**是`v-bind`和`v-on`配合使用的语法糖
 
