--- a/前端算法与数据结构.md
+++ b/前端算法与数据结构.md
@@ -1,6 +1,24 @@
-# ==前端算法与数据结构==
+==前端算法与数据结构==
 
 <!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+**ACM模式读取输入**
+
+```js
+var n = parseInt(readline());
+
+var ans = 0;
+for(var i=0;i<n;i++){
+ lines = readlin().split(" ");
+    for(var j=0;j<lines.length;j++){
+        ans += parseInt(lines[j])
+    }
+}
+
+print(ans)
+```
+
+
 
 
 # 第1章 数据结构与算法
@@ -14,8 +32,6 @@
 <img src="前端算法与数据结构.assets/image-20201221205907582.png" alt="image-20201221205907582" style="zoom:80%;" />
 
 <img src="前端算法与数据结构.assets/image-20201221205947124.png" alt="image-20201221205947124" style="zoom:80%;" />
-
-
 
 ## 1-2 数据结构与算法简介 
 
@@ -71,11 +87,9 @@
 
 ```js
 const stack = [];
-
 //入栈
 stack.push(1);
 stack.push(2);
-
 //出栈
 const item1 = stack.pop();
 ```
@@ -135,22 +149,6 @@ var isValid = function (s) {
 
 
 
-```js
-var n = parseInt(readline());
-
-var ans = 0;
-for(var i=0;i<n;i++){
- lines = readlin().split(" ");
-    for(var j=0;j<lines.length;j++){
-        ans += parseInt(lines[j])
-    }
-}
-
-print(ans)
-```
-
-
-
 ##  3-4 前端与栈：JS 中的函数调var用堆栈 
 
 ![image-20201221220413842](前端算法与数据结构.assets/image-20201221220413842.png)
@@ -174,6 +172,7 @@ print(ans)
  * @param {TreeNode} root
  * @return {number[]}
  */
+//这是迭代
 var preorderTraversal = function(root) {
     const res = [];
     const stack = [];
@@ -195,7 +194,6 @@ class Stack{
   constructor(){
     this.items = [];
   }
-
   //入栈(数组尾部添加元素)
   push(element){
     this.items.push(element);
@@ -269,9 +267,93 @@ var DectoBin = function(num){
   }
   return res;
 }
-
 console.log(DectoBin(35));
 ```
+
+## 3-8 最小栈
+
+### 题目1：包含 min 函数的栈
+
+> 题目要求：构建一个包含Min函数的栈，使得获取栈中最小元素为O(1) **构造辅助栈实现**
+>
+> 来自剑指offer30
+
+思路:
+
+* **数据栈 A** ： 栈 A 用于存储所有元素，保证入栈 push() 函数、出栈 pop() 函数、获取栈顶 top() 函数的正常逻辑。
+* **辅助栈 B** ： 栈 B 中存储栈 A 中所有 非严格降序 的元素，则栈 A 中的最小元素始终对应栈 B 的栈顶元素，即 min() 函数只需返回栈 B 的栈顶元素即可。
+
+因此，只需设法维护好 栈 B的元素，使其保持非严格降序，即可实现 `min()` 函数的 O(1)复杂度。
+
+<img src="https://pic.leetcode-cn.com/f31f4b7f5e91d46ea610b6685c593e12bf798a9b8336b0560b6b520956dd5272-Picture1.png" alt="Picture1.png" style="zoom:50%;" />
+
+函数设计：
+
+* push(x) 函数： 重点为保持栈 B 的元素是 非严格降序 的。
+  1. 将 x 压入栈 A （即 A.add(x) ）；
+  2. 若 ① 栈 B 为空 或 ② x **小于等于** 栈 B 的栈顶元素，则将 x压入栈 B （即 B.add(x) ）。
+
+* pop() 函数： 重点为保持栈 A, BA,B 的 元素一致性 。
+  1. 执行栈 A 出栈（即 A.pop() ），将出栈元素记为 y ；
+  2. 若 y 等于栈 B 的栈顶元素，则执行栈 B 出栈（即 B.pop() ）。
+
+* top() 函数： 直接返回栈 A 的栈顶元素即可，即返回 A.peek() 。 
+* min() 函数： 直接返回栈 B 的栈顶元素即可，即返回 B.peek() 。
+
+```js
+/**
+ * initialize your data structure here.
+ */
+var MinStack = function() {
+    this.stackA = [];
+    this.stackB = [];
+};
+
+/** 
+ * @param {number} x
+ * @return {void}
+ */
+MinStack.prototype.push = function(x) {
+    this.stackA.push(x);
+    if(!this.stackB.length || x<=this.stackB[this.stackB.length-1]){
+        this.stackB.push(x);
+    }
+};
+
+/**
+ * @return {void}
+ */
+MinStack.prototype.pop = function() {
+    if(this.stackA.pop() === this.stackB[this.stackB.length-1]){
+        this.stackB.pop();
+    }
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.top = function() {
+    return this.stackA[this.stackA.length-1];
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.min = function() {
+    return this.stackB[this.stackB.length-1]
+};
+
+/**
+ * Your MinStack object will be instantiated and called as such:
+ * var obj = new MinStack()
+ * obj.push(x)
+ * obj.pop()
+ * var param_3 = obj.top()
+ * var param_4 = obj.min()
+ */
+```
+
+<img src="前端算法与数据结构.assets/image-20210224233109060.png" alt="image-20210224233109060" style="zoom:50%;" />
 
 # 第4章 队列
 
@@ -376,13 +458,13 @@ class Queue{
 
 const queue = new Queue()
 console.log(queue.isEmpty())  // true
-queue.enqueue('AAA')
-queue.enqueue('BBB')
+queue.enqueue('AA')
+queue.enqueue('BB')
 queue.enqueue('CCC')
 console.log(queue.isEmpty())  // false
 console.log(queue.size())     // 3
-console.log(queue) // AAA,BBB,CCC
-console.log(queue.peek())     // AAA
+console.log(queue) // AA,BB,CCC
+console.log(queue.peek())     // AA
 queue.dequeue()
 queue.clear()
 console.log(queue.isEmpty())  // true
@@ -392,11 +474,58 @@ console.log(queue.isEmpty())  // true
 
 请用队列这个数据结构结合React或Vue写一个任务APP，包括添加任务和完成任务功能，要求任务只能先进先出
 
+## 4-6 双端队列
 
+### 题目2:滑动窗口的最大值
+
+https://leetcode-cn.com/problems/hua-dong-chuang-kou-de-zui-da-zhi-lcof/
+
+<img src="前端算法与数据结构.assets/image-20210225104320833.png" alt="image-20210225104320833" style="zoom:50%;" />
+
+> 思路：利用一个单调队列deque存储窗口中的最大值
+
+**窗口**对应的数据结构为 **双端队列** ，本题使用 **单调队列** 即可解决以上问题。遍历数组时，每轮保证单调队列 deque ：
+
+1. **deque** 内 **仅包含窗口内的元素** ⇒ 每轮窗口滑动移除了元素 nums[i - 1] ，需将 deque 内的对应元素一起删除。
+2. **deque** 内的元素 **非严格递减** ⇒ 每轮窗口滑动添加了元素 nums[j + 1]，需将 deque内所有 < nums[j + 1]的元素删除。
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number[]}
+ */
+var maxSlidingWindow = function(nums, k) {
+    //特殊情况判断
+    if(nums.length == 0 || k==0) return [];
+    //单调队列和结果数组初始化
+    var deque = [];
+    var res = [];
+    //未形成窗口阶段
+    for(let i=0;i<k;i++){
+        while((deque.length) && (deque[deque.length-1]<nums[i])){
+            deque.pop();
+        }
+        deque.push(nums[i]);
+    }
+    res.push(deque[0]);
+    //形成窗口后
+    for(let i=k;i<nums.length;i++){
+        if(deque[0]=== nums[i-k]){
+            deque.shift();
+        }
+        //将deque中所有小于nums[i]的元素删除，从而保持队列的单调性
+        while((deque.length) && (deque[deque.length-1]<nums[i])){
+            deque.pop();
+        }
+        deque.push(nums[i]);
+        res.push(deque[0]);
+    }
+     return res;
+};
+```
 
 # 第5章 链表
-
-与栈和队列不同，链表元素的存储不是连续的。链表是非常高频的考点，在前端的日常工作中也有举足轻重的地位，这章一定要好好学习呦！
 
 ## 5-1 链表简介
 
@@ -414,19 +543,16 @@ const d = {val:'d'};
 a.next = b;
 b.next = c;
 c.next = d;
-
 //遍历链表
 let p = a;
 while(p){
   console.log(p.val);
   p = p.next;
 }
-
 //插入e到c和d之间
 const e = {val:'e'};
 c.next = e;
 e.next = d;
-
 //删除
 c.next = d;
 ```
@@ -473,7 +599,7 @@ var deleteNode = function(node) {
 
 <img src="前端算法与数据结构.assets/image-20201225204616880.png" alt="image-20201225204616880" style="zoom:67%;" />
 
-我们可以申请两个指针，第一个指针叫 pre，最初是指向 null 的。
+我们可以申请两个指针：第一个指针叫 pre，最初是指向 null 的。
 第二个指针 cur 指向 head，然后不断遍历 cur。
 每次迭代到 cur，都将 cur 的 next 指向 pre，然后 pre 和 cur 前进一位。
 都迭代完了(cur 变成 null 了)，pre 就是最后一个节点了。
@@ -549,17 +675,6 @@ var addTwoNumbers = function(l1, l2) {
 <img src="前端算法与数据结构.assets/image-20201225214943066.png" alt="image-20201225214943066" style="zoom:33%;" />
 
 ```js
-/**
- * Definition for singly-linked list.
- * function ListNode(val) {
- *     this.val = val;
- *     this.next = null;
- * }
- */
-/**
- * @param {ListNode} head
- * @return {ListNode}
- */
 var deleteDuplicates = function(head) {
     let p = head;
     while(p && p.next){
@@ -582,8 +697,6 @@ var deleteDuplicates = function(head) {
 <img src="前端算法与数据结构.assets/image-20201225220327426.png" alt="image-20201225220327426" style="zoom: 33%;" />
 
 <img src="前端算法与数据结构.assets/image-20201225220358192.png" alt="image-20201225220358192" style="zoom:33%;" />
-
-
 
 ```js
 var hasCycle = function(head) {
@@ -637,6 +750,8 @@ Function.prototype.y = 'y';
 console.log(func.y)//y
 ```
 
+### 题目1：instanceof实现
+
 <img src="前端算法与数据结构.assets/image-20201226210535935.png" alt="image-20201226210535935" style="zoom:50%;" />
 
 <img src="前端算法与数据结构.assets/image-20201226210620582.png" alt="image-20201226210620582" style="zoom:50%;" />
@@ -653,11 +768,12 @@ const instanceOf = (A,B) => {
     }
     return false;
 };
-
 //测试
 instanceof([],Object)//true
 instanceof(1,Number)//true
 ```
+
+### 题目2：看代码输出
 
 <img src="前端算法与数据结构.assets/image-20201226210906699.png" alt="image-20201226210906699" style="zoom: 67%;" />
 
@@ -677,8 +793,6 @@ console.log(F.a);//value a
 console.log(F.b);//value b
 ```
 
-
-
 ## 5-8 前端与链表：使用链表指针获取 JSON 的节点值 
 
 ```js
@@ -689,7 +803,6 @@ const json = {
 
 //沿着路径查找json的某一个节点值
 const path = ['a','b','c'];
-
 let p = json;
 path.forEach(k =>{
   p = p[k]
@@ -698,11 +811,76 @@ path.forEach(k =>{
 console.log(p);//1
 ```
 
-
-
 ## 5-10 思考一 判断链表是否为回文链表
 
 https://leetcode-cn.com/problems/palindrome-linked-list/
+
+<img src="前端算法与数据结构.assets/image-20210225165432533.png" alt="image-20210225165432533" style="zoom: 50%;" />
+
+一共为两个步骤：
+
+1. 复制链表值到数组列表中。
+2. 使用双指针法判断是否为回文。
+
+第一步，我们需要遍历链表将值复制到数组列表中。我们用 currentNode 指向当前节点。每次迭代向数组添加 currentNode.val，并更新 currentNode = currentNode.next，当 currentNode = null 时停止循环。
+
+执行第二步的最佳方法取决于你使用的语言。最好使用**双指针法来检查是否为回文**。我们在起点放置一个指针，在结尾放置一个指针，每一次迭代判断两个指针指向的元素是否相同，若不同，返回 false；相同则将两个指针向内移动，并继续判断，直到两个指针相遇。
+
+```js
+var isPalindrome = function(head) {
+    const vals = [];
+    let p = head;
+    while(p){
+        vals.push(p.val);
+        p = p.next;
+    }
+    for(let i=0,j=vals.length-1;i<j;++i,--j){
+        if(vals[i]!==vals[j]){
+            return false;
+        }
+    }
+    return true;
+};
+```
+
+## 其他题目
+
+### 求两个相交链表的首个相交节点
+
+方法1：标记已经访问的节点
+
+方法2：利用A和B的节点数目之差
+
+https://www.cnblogs.com/chenwenbiao/archive/2011/05/26/2058132.html
+
+### 实现LRU机制（双向链表）
+
+https://leetcode-cn.com/problems/lru-cache/solution/lruhuan-cun-ji-zhi-by-leetcode-solution/
+
+```js
+var LRUCache = function(capacity) {
+
+};
+
+/** 
+ * @param {number} key
+ * @return {number}
+ */
+LRUCache.prototype.get = function(key) {
+
+};
+
+/** 
+ * @param {number} key 
+ * @param {number} value
+ * @return {void}
+ */
+LRUCache.prototype.put = function(key, value) {
+
+};
+```
+
+
 
 # 第6章 集合
 
@@ -741,7 +919,7 @@ var intersection = function(nums1, nums2) {
 };
 ```
 
-注意：判断一个数值是否在数组里 **includes方法**
+【注意】：判断一个数值是否在数组里 **includes方法**
 
 ## 6-3 前端与集合：使用 ES6 中 Set
 
@@ -760,7 +938,6 @@ mySet.add(o);
 mySet.add({a:1,b:2})//set里有5个元素，两个对象不同
 
 //has
-const has = mySet.has() //has为true
 const has2 = mySet.has(o) //has2为true
 
 //delete
@@ -793,29 +970,27 @@ const difference = new Set([...mySet].filter(x => !mySet2.has(x)))
 在学习数据库的使用时，都有使用过Join，对数据库中的两张或两张以上表进行连接操作。
 **注释：**INNER JOIN 与 JOIN 是相同的。
 
-
-
 # 第7章 字典
 
-## 7-1 字典简介
+## 7-1 字典
 
 <img src="前端算法与数据结构.assets/image-20201230201144229.png" alt="image-20201230201144229" style="zoom: 50%;" />
 
 ```js
 const m = new Map();
-
 //增
-m.set('a','aa');
-m.set('b','bb');
+m.set('a','A');
+m.set('b','B');
+
 //删
 m.delete('b');
 //m.clear();
 
 //改
-m.set('a','aaa');
+m.set('a','Aa');
 
 //查
-console.log(m.get('a'));//aaa
+console.log(m.get('a'));//Aa
 console.log(m.has('a'));//true
 
 ```
@@ -829,11 +1004,6 @@ console.log(m.has('a'));//true
 <img src="前端算法与数据结构.assets/image-20201230201853555.png" alt="image-20201230201853555" style="zoom:50%;" />
 
 ```js
-/**
- * @param {number[]} nums1
- * @param {number[]} nums2
- * @return {number[]}
- */
 var intersection = function(nums1, nums2) {
     const map = new Map();
     nums1.forEach(n => {
@@ -856,12 +1026,8 @@ var intersection = function(nums1, nums2) {
 
 ![image-20201230203321091](前端算法与数据结构.assets/image-20201230203321091.png)
 
-优化后的使用字典的版本
-
-用时和内存消耗都有很大的提升
-重构后的代码：
-时间复杂度不变
-空间增加一个O（1）的map，其空间复杂度仍是O（n）
+优化后的使用字典的版本，用时和内存消耗都有很大的提升
+重构后的代码：时间复杂度不变；空间增加一个O（1）的map，其空间复杂度仍是O（n）
 
 ```js
 /**
@@ -925,8 +1091,6 @@ var twoSum = function(nums, target) {
 };
 ```
 
-
-
 ## 7-5 LeetCode：3. 无重复字符的最长子串 
 
 <img src="前端算法与数据结构.assets/image-20201230204540299.png" alt="image-20201230204540299" style="zoom: 67%;" />
@@ -943,7 +1107,7 @@ var twoSum = function(nums, target) {
  * @return {number}
  */
 var lengthOfLongestSubstring = function(s) {
-    //左指针其实位置
+    //左指针起始位置
     let l =0;
     let res = 0;
     //利用map字典查看子串是否包含重复子串
@@ -1032,7 +1196,7 @@ var minWindow = function(s, t) {
 
 [`Objects`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Object) 和 `Maps` 类似的是，它们都允许你按键存取一个值、删除键、检测一个键是否绑定了值。因此（并且也没有其他内建的替代方式了）过去我们一直都把对象当成 `Maps` 使用。不过 `Maps` 和 `Objects` 有一些重要的区别，在下列情况里使用 `Map` 会是更好的选择：
 
-| Map      | Object                                                       |                                                              |
+|          | Map                                                          | Object                                                       |
 | :------- | :----------------------------------------------------------- | ------------------------------------------------------------ |
 | 意外的键 | `Map` 默认情况不包含任何键。只包含显式插入的键。             | 一个 `Object` 有一个原型, 原型链上的键名有可能和你自己在对象上的设置的键名产生冲突。**注意:** 虽然 ES5 开始可以用 `Object.create(null)` 来创建一个没有原型的对象，但是这种用法不太常见。 |
 | 键的类型 | 一个 `Map`的键可以是**任意值**，包括函数、对象或任意基本类型。 | 一个`Object` 的键必须是一个 [`String`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/String) 或是[`Symbol`](https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Global_Objects/Symbol)。 |
@@ -1045,11 +1209,13 @@ var minWindow = function(s, t) {
 
 # 第8章 树
 
-## 8-1 树简介
+## 8-1 树
 
 <img src="前端算法与数据结构.assets/image-20210104155808268.png" alt="image-20210104155808268" style="zoom: 50%;" />
 
-<img src="前端算法与数据结构.assets/image-20210104160033147.png" alt="image-20210104160033147" style="zoom:50%;" /> 
+<img src="前端算法与数据结构.assets/image-20210104160033147.png" alt="image-20210104160033147" style="zoom:50%;" />
+
+ 
 
 ## 8-2 深度与广度优先遍历 
 
@@ -1126,13 +1292,13 @@ bfs(tree);
 
 ## 8-3 二叉树的先中后序遍历 
 
-![image-20210104163212832](前端算法与数据结构.assets/image-20210104163212832.png)
+<img src="前端算法与数据结构.assets/image-20210104163212832.png" alt="image-20210104163212832" style="zoom:50%;" />
 
-![image-20210104163253929](前端算法与数据结构.assets/image-20210104163253929.png)
+<img src="前端算法与数据结构.assets/image-20210104163253929.png" alt="image-20210104163253929" style="zoom:50%;" />
 
 测试输入：
 
-![image-20210104164216207](前端算法与数据结构.assets/image-20210104164216207.png)
+<img src="前端算法与数据结构.assets/image-20210104164216207.png" alt="image-20210104164216207" style="zoom:50%;" />
 
 BinaryTree
 
@@ -1183,16 +1349,10 @@ const preorder = (root) => {
 }
 
 preorder(bt);
-//1
-2
-4
-5
-3
-6
-7
+//1 2 4 5 3 6 7
 ```
 
-![image-20210104164235488](前端算法与数据结构.assets/image-20210104164235488.png)
+<img src="前端算法与数据结构.assets/image-20210104164235488.png" alt="image-20210104164235488" style="zoom:50%;" />
 
 ```js
 const bt = require('./bt');
@@ -1205,16 +1365,10 @@ const inorder = (root) =>{
 }
 
 inorder(bt);
-// 4
-// 2
-// 5
-// 1
-// 6
-// 3
-// 7
+// 4 2 5 1 6 3 7
 ```
 
-![image-20210104164511494](前端算法与数据结构.assets/image-20210104164511494.png)
+<img src="前端算法与数据结构.assets/image-20210104164511494.png" alt="image-20210104164511494" style="zoom:50%;" />
 
 ```js
 const bt = require('./bt');
@@ -1227,20 +1381,14 @@ const postorder = (root) =>{
 }
 
 postorder(bt)
-// 4
-// 5
-// 2
-// 6
-// 7
-// 3
-// 1
+// 4 5 2 6 7 3 1
 ```
 
 ## 8-4 二叉树的先中后序遍历（非递归版） 
 
 递归版太简单了，一般不会考察。考察非递归版
 
-使用堆栈模拟递归调用的过程
+思路：使用堆栈模拟递归调用的过程
 
 **前序遍历**
 
@@ -1323,7 +1471,7 @@ postorder(bt)
 
 ## 8-5 LeetCode：104. 二叉树的最大深度 
 
-![image-20210104171842397](前端算法与数据结构.assets/image-20210104171842397.png)
+<img src="前端算法与数据结构.assets/image-20210104171842397.png" alt="image-20210104171842397" style="zoom: 67%;" />
 
 <img src="前端算法与数据结构.assets/image-20210104171959283.png" alt="image-20210104171959283" style="zoom:50%;" />
 
@@ -1420,19 +1568,15 @@ var minDepth = function(root) {
 };
 ```
 
-时间：O(n)
-
-空间:O(n)
-
-n是节点的数量
+时间：O(n) 空间:O(n) n是节点的数量
 
 ## 8-7 LeetCode：102. 二叉树的层序遍历 
 
 <img src="前端算法与数据结构.assets/image-20210104210351129.png" alt="image-20210104210351129" style="zoom:80%;" />
 
-<img src="前端算法与数据结构.assets/image-20210104210449022.png" alt="image-20210104210449022" style="zoom:67%;" />
+<img src="前端算法与数据结构.assets/image-20210104210449022.png" alt="image-20210104210449022" style="zoom: 50%;" />
 
-<img src="前端算法与数据结构.assets/image-20210104210552071.png" alt="image-20210104210552071" style="zoom:67%;" />
+<img src="前端算法与数据结构.assets/image-20210104210552071.png" alt="image-20210104210552071" style="zoom: 50%;" />
 
 ```js
 /**
@@ -1526,9 +1670,7 @@ var inorderTraversal = function(root) {
 };
 ```
 
-**迭代版本：**
-
-使用栈
+**迭代版本：**使用栈
 
 ```js
 var inorderTraversal = function(root) {
@@ -1619,6 +1761,8 @@ dfs(json,[]);
 
 ![image-20210104215152190](前端算法与数据结构.assets/image-20210104215152190.png)
 
+## 8-12 反转二叉树，判断相同/镜像二叉树
+
 # 第9章 图
 
 ## 9-1 图
@@ -1637,8 +1781,6 @@ dfs(json,[]);
 
 <img src="前端算法与数据结构.assets/image-20210105101741200.png" alt="image-20210105101741200" style="zoom:67%;" />
 
-**DFS**
-
 <img src="前端算法与数据结构.assets/image-20210105101936209.png" alt="image-20210105101936209" style="zoom:67%;" />
 
 ```js
@@ -1648,7 +1790,6 @@ const graph ={
   2:[0,3],
   3:[3]
 };
-
 module.exports = graph;
 ```
 
@@ -1670,8 +1811,6 @@ dfs(2);
 // 2 0 1 3
 ```
 
-**BFS**
-
 <img src="前端算法与数据结构.assets/image-20210105102423998.png" alt="image-20210105102423998" style="zoom:67%;" />
 
 ```js
@@ -1692,8 +1831,6 @@ while(q.length){
 }
 // 2 0 3 1
 ```
-
-
 
 ## 9-3 LeetCode：65. 有效数字
 
@@ -1778,13 +1915,13 @@ var pacificAtlantic = function(matrix) {
 
 ![image-20210105105448496](前端算法与数据结构.assets/image-20210105105448496.png)
 
-![image-20210105105609672](前端算法与数据结构.assets/image-20210105105609672.png)
+<img src="前端算法与数据结构.assets/image-20210105105609672.png" alt="image-20210105105609672" style="zoom:50%;" />
 
-![image-20210105105755051](前端算法与数据结构.assets/image-20210105105755051.png)
+<img src="前端算法与数据结构.assets/image-20210105105755051.png" alt="image-20210105105755051" style="zoom: 67%;" />
 
-![image-20210105105813644](前端算法与数据结构.assets/image-20210105105813644.png)
+<img src="前端算法与数据结构.assets/image-20210105105813644.png" alt="image-20210105105813644" style="zoom:50%;" />
 
-![image-20210105105832862](前端算法与数据结构.assets/image-20210105105832862.png)
+<img src="前端算法与数据结构.assets/image-20210105105832862.png" alt="image-20210105105832862" style="zoom:67%;" />
 
 **DFS**
 
@@ -1869,6 +2006,8 @@ var cloneGraph = function(node) {
 时间：O(n) n是图的节点数
 
 空间：O(n)
+
+## 9-6 判断图中是否有环
 
 # 第10章 堆
 
@@ -2053,9 +2192,9 @@ console.log(h.size());//2
 
 ![image-20210114205900104](前端算法与数据结构.assets/image-20210114205900104.png)
 
-![image-20210114214951589](前端算法与数据结构.assets/image-20210114214951589.png)
+<img src="前端算法与数据结构.assets/image-20210114214951589.png" alt="image-20210114214951589" style="zoom: 67%;" />
 
-![image-20210114215041373](前端算法与数据结构.assets/image-20210114215041373.png)
+<img src="前端算法与数据结构.assets/image-20210114215041373.png" alt="image-20210114215041373" style="zoom: 67%;" />
 
 ```js
 class MinHeap{
@@ -2131,7 +2270,7 @@ var findKthLargest = function(nums, k) {
 
 ## 10-4 LeetCode：347. 前 K 个高频元素 
 
-![image-20210114221716351](前端算法与数据结构.assets/image-20210114221716351.png)
+<img src="前端算法与数据结构.assets/image-20210114221716351.png" alt="image-20210114221716351" style="zoom:67%;" />
 
 **思路1 记录词频后排序**
 
@@ -2275,7 +2414,7 @@ var topKFrequent = function(nums, k) {
 
 ## 10-5 LeetCode：23. 合并K个排序链表 
 
-![image-20210114224450829](前端算法与数据结构.assets/image-20210114224450829.png)
+<img src="前端算法与数据结构.assets/image-20210114224450829.png" alt="image-20210114224450829" style="zoom:80%;" />
 
 <img src="前端算法与数据结构.assets/image-20210114224933954.png" alt="image-20210114224933954" style="zoom:50%;" />
 
@@ -2372,11 +2511,11 @@ var mergeKLists = function(lists) {
 
 # 第11章 搜索排序
 
-## 11-1 排序和搜索简介
+## 11-1 排序和搜索
 
-![image-20210118204636726](前端算法与数据结构.assets/image-20210118204636726.png)
+<img src="前端算法与数据结构.assets/image-20210118204636726.png" alt="image-20210118204636726" style="zoom:67%;" />
 
-![image-20210118204645116](前端算法与数据结构.assets/image-20210118204645116.png)
+<img src="前端算法与数据结构.assets/image-20210118204645116.png" alt="image-20210118204645116" style="zoom:67%;" />
 
 **排序算法**
 
@@ -2397,10 +2536,10 @@ var mergeKLists = function(lists) {
 
 > 参考网站：visualgo
 
-![image-20210118204903107](前端算法与数据结构.assets/image-20210118204903107.png)
+<img src="前端算法与数据结构.assets/image-20210118204903107.png" alt="image-20210118204903107" style="zoom: 67%;" />
 
 ```js
-Array.prototype.bubbleSort = function(){
+Array.prototype.buBleSort = function(){
   for(let i=0;i<this.length-1;i++){
     for(let j=0;j<this.length-1-i;j+=1){
       if(this[j]>this[j+1]){
@@ -2413,7 +2552,7 @@ Array.prototype.bubbleSort = function(){
 }
 
 const arr = [5,4,3,2,1];
-arr.bubbleSort();
+arr.buBleSort();
 console.log(arr);
 ```
 
@@ -2421,7 +2560,7 @@ console.log(arr);
 
 ## 11-3 选择排序 
 
-![image-20210118210357206](前端算法与数据结构.assets/image-20210118210357206.png)
+<img src="前端算法与数据结构.assets/image-20210118210357206.png" alt="image-20210118210357206" style="zoom:67%;" />
 
 ```js
 Array.prototype.selectionSort = function () {
@@ -2431,12 +2570,12 @@ Array.prototype.selectionSort = function () {
 			if (this[j] < this[indexMin]) {
 				indexMin = j;
 			}
-    }
-    if(indexMin !== i){
-      const temp = this[i];
-		  this[i] = this[indexMin];
-		  this[indexMin] = temp;
-    }
+    	}
+    	if(indexMin !== i){
+      		const temp = this[i];
+		    this[i] = this[indexMin];
+		    this[indexMin] = temp;
+        }
 	}
 };
 
@@ -2449,7 +2588,7 @@ console.log(arr);
 
 ## 11-4 插入排序
 
-![image-20210118211327193](前端算法与数据结构.assets/image-20210118211327193.png)
+<img src="前端算法与数据结构.assets/image-20210118211327193.png" alt="image-20210118211327193" style="zoom:67%;" />
 
 ```js
 Array.prototype.insertionSort = function () {
@@ -2477,9 +2616,9 @@ console.log(arr);
 
 ## 11-5 归并排序
 
-![image-20210118220404442](前端算法与数据结构.assets/image-20210118220404442.png)
+<img src="前端算法与数据结构.assets/image-20210118220404442.png" alt="image-20210118220404442" style="zoom: 67%;" />
 
-![image-20210118220432481](前端算法与数据结构.assets/image-20210118220432481.png)
+<img src="前端算法与数据结构.assets/image-20210118220432481.png" alt="image-20210118220432481" style="zoom:67%;" />
 
 ```js
 Array.prototype.mergeSort = function () {
@@ -2520,9 +2659,9 @@ console.log(arr);
 
 ## 11-6 快速排序 
 
-![image-20210118221620800](前端算法与数据结构.assets/image-20210118221620800.png)
+<img src="前端算法与数据结构.assets/image-20210118221620800.png" alt="image-20210118221620800" style="zoom: 67%;" />
 
-![image-20210118221730210](前端算法与数据结构.assets/image-20210118221730210.png)
+<img src="前端算法与数据结构.assets/image-20210118221730210.png" alt="image-20210118221730210" style="zoom:67%;" />
 
 ```js
 Array.prototype.quickSort = function () {
@@ -2563,7 +2702,7 @@ console.log(arr);
 
 ## 11-7 顺序搜索
 
-![image-20210119093636563](前端算法与数据结构.assets/image-20210119093636563.png)
+<img src="前端算法与数据结构.assets/image-20210119093636563.png" alt="image-20210119093636563" style="zoom:67%;" />
 
 ```js
 Array.prototype.sequentialSearch = function(item){
@@ -2616,7 +2755,7 @@ console.log(res);//1
 
 ## 11-9 LeetCode：21. 合并两个有序链表 
 
-<img src="前端算法与数据结构.assets/image-20210119094455759.png" alt="image-20210119094455759" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets/image-20210119094455759.png" alt="image-20210119094455759" style="zoom: 67%;" />
 
 <img src="前端算法与数据结构.assets/image-20210119100202612.png" alt="image-20210119100202612" style="zoom: 67%;" />
 
@@ -2811,11 +2950,11 @@ var invertTree = function(root) {
 
 ## 12-4 LeetCode：100. 相同的树
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129194135350.png" alt="image-20210129194135350" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210129194135350.png" alt="image-20210129194135350" style="zoom:50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129195604466.png" alt="image-20210129195604466" style="zoom: 33%;" />
+<img src="前端算法与数据结构.assets\image-20210129195604466.png" alt="image-20210129195604466" style="zoom: 33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129195639173.png" alt="image-20210129195639173" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210129195639173.png" alt="image-20210129195639173" style="zoom:33%;" />
 
 ```js
 /**
@@ -2853,11 +2992,11 @@ var isSameTree = function(p, q) {
 
 ## 12-5 LeetCode：101. 对称二叉树 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129194741070.png" alt="image-20210129194741070" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210129194741070.png" alt="image-20210129194741070" style="zoom:50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129195705113.png" alt="image-20210129195705113" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210129195705113.png" alt="image-20210129195705113" style="zoom:33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129195723123.png" alt="image-20210129195723123" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210129195723123.png" alt="image-20210129195723123" style="zoom:33%;" />
 
 ```js
 /**
@@ -2899,26 +3038,26 @@ var isSymmetric = function(root) {
 
 ## 13-1 动态规划简介 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129201910984.png" alt="image-20210129201910984" style="zoom: 33%;" />
+<img src="前端算法与数据结构.assets\image-20210129201910984.png" alt="image-20210129201910984" style="zoom: 33%;" />
 
 > **动态规划的步骤**
 >
 > * **定义子问题**
 > * **反复执行**
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129201946630.png" alt="image-20210129201946630" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210129201946630.png" alt="image-20210129201946630" style="zoom:33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129201929582.png" alt="image-20210129201929582" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210129201929582.png" alt="image-20210129201929582" style="zoom:33%;" />
 
 >  DP和分治区别：DP把问题分解为**相互重叠**的子问题，分治把问题分解为**相互独立**的子问题
 
 ## 13-2 LeetCode：70. 爬楼梯 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129202034906.png" alt="image-20210129202034906" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210129202034906.png" alt="image-20210129202034906" style="zoom:50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129203310885.png" alt="image-20210129203310885" style="zoom:40%;" />
+<img src="前端算法与数据结构.assets\image-20210129203310885.png" alt="image-20210129203310885" style="zoom:40%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129203329306.png" alt="image-20210129203329306" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210129203329306.png" alt="image-20210129203329306" style="zoom:33%;" />
 
 ```js
 /**
@@ -2938,9 +3077,9 @@ var climbStairs = function(n) {
 };
 ```
 
-时间：O（n）
+* 时间：O（n）
 
-空间：开辟了一个数组存值，O（n）
+* 空间：开辟了一个数组存值，O（n）
 
 优化版本：没必要用数组记录动态规划的历史的值，我们可以使用两个值，这样就将空间复杂度降到O（1）常量级别
 
@@ -2967,11 +3106,11 @@ var climbStairs = function(n) {
 
 ## 13-3 LeetCode：198. 打家劫舍 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129203406572.png" alt="image-20210129203406572" style="zoom: 60%;" />
+<img src="前端算法与数据结构.assets\image-20210129203406572.png" alt="image-20210129203406572" style="zoom: 60%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129204925669.png" alt="image-20210129204925669" style="zoom:40%;" />
+<img src="前端算法与数据结构.assets\image-20210129204925669.png" alt="image-20210129204925669" style="zoom:40%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129204940948.png" alt="image-20210129204940948" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210129204940948.png" alt="image-20210129204940948" style="zoom:33%;" />
 
 ```js
 /**
@@ -2992,9 +3131,8 @@ var rob = function(nums) {
 };
 ```
 
-时间：O（n）
-
-空间：O（n）
+* 时间：O（n）
+* 空间：O（n） 
 
 优化版本：使用两个变量，记录DP过程中的前两个值
 
@@ -3022,7 +3160,7 @@ var rob = function(nums) {
 
 ## 13-4 思考题 —— 打家劫舍 II
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210129205144470.png" alt="image-20210129205144470" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210129205144470.png" alt="image-20210129205144470" style="zoom:50%;" />
 
 **我的思路**
 
@@ -3057,15 +3195,58 @@ var rob = function(nums) {
 };
 ```
 
+## 13-5 LeetCode：322. 零钱兑换
+
+<img src="前端算法与数据结构.assets/image-20210222153304153.png" alt="image-20210222153304153" style="zoom: 50%;" />
+
+DP中非常有代表性的”最值“问题
+
+![image-20210222153158099](前端算法与数据结构.assets/image-20210222153158099.png)
+
+```js
+/**
+ * @param {number[]} coins
+ * @param {number} amount
+ * @return {number}
+ */
+var coinChange = function(coins, amount) {
+    //用于保存每个目标总额对应的最小硬币个数
+    const f = [];
+    //提前当以已知情况
+    f[0] = 0;
+    //遍历[1,amount]这个区间的硬币总额
+    for(let i=1;i<=amount;i++){
+        //求的是最小值，因此我们预设为无穷大，确保它一定会被更小的数更新
+        f[i]= Infinity;
+        //循环遍历每个可用硬币的面额
+        for(let j=0;j<coins.length;j++){
+            //若硬币面额小于目标总额，则问题成立
+            if(i-coins[j]>=0){
+                //状态转移方程
+                f[i] = Math.min(f[i],f[i-coins[j]]+1);
+            }
+        }
+    }
+    //若目标金额对应的解为无穷大,则无解
+    if(f[amount]===Infinity){
+        return -1;
+    }
+    //若有解，则直接返回
+    return f[amount];
+};
+```
+
+
+
 # 第14章 贪心算法
 
 ## 14-1 贪心算法
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130220821183.png" alt="image-20210130220821183" style="zoom: 33%;" />
+<img src="前端算法与数据结构.assets\image-20210130220821183.png" alt="image-20210130220821183" style="zoom: 33%;" />
 
 贪心算法的负面例子：
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130220832311.png" alt="image-20210130220832311" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210130220832311.png" alt="image-20210130220832311" style="zoom:33%;" />
 
 对6来说，3+3只需要2个币
 
@@ -3073,11 +3254,11 @@ var rob = function(nums) {
 
 ## 14-2 LeetCode：455. 分饼干 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130215136840.png" alt="image-20210130215136840" style="zoom:60%;" />
+<img src="前端算法与数据结构.assets\image-20210130215136840.png" alt="image-20210130215136840" style="zoom:60%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130220930687.png" alt="image-20210130220930687" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210130220930687.png" alt="image-20210130220930687" style="zoom:33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130220918227.png" alt="image-20210130220918227" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210130220918227.png" alt="image-20210130220918227" style="zoom:33%;" />
 
 ```js
 /**
@@ -3103,19 +3284,18 @@ var findContentChildren = function(g, s) {
 };
 ```
 
-时间：O（nlogn）
-
-空间：O(1)
+* 时间：O（nlogn）
+* 空间：O(1)
 
 ## 14-3 LeetCode：122. 买卖股票的最佳时机 II 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130215809813.png" alt="image-20210130215809813" style="zoom: 50%;" />
+<img src="前端算法与数据结构.assets\image-20210130215809813.png" alt="image-20210130215809813" style="zoom: 50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130215835622.png" alt="image-20210130215835622" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210130215835622.png" alt="image-20210130215835622" style="zoom:50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130220947882.png" alt="image-20210130220947882" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210130220947882.png" alt="image-20210130220947882" style="zoom:33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210130220901675.png" alt="image-20210130220901675" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210130220901675.png" alt="image-20210130220901675" style="zoom:33%;" />
 
 ```js
 /**
@@ -3133,17 +3313,16 @@ var maxProfit = function(prices) {
 };
 ```
 
-时间：O(n)
-
-空间 ：O（1）
+* 时间：O(n)
+* 空间 ：O（1）
 
 # 第15章 回溯算法
 
 ## 15-1 回溯算法
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201141534760.png" alt="image-20210201141534760" style="zoom: 67%;" />
+<img src="前端算法与数据结构.assets\image-20210201141534760.png" alt="image-20210201141534760" style="zoom: 33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201141547798.png" alt="image-20210201141547798" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210201141547798.png" alt="image-20210201141547798" style="zoom: 33%;" />
 
 **适合回溯算法解决的问题**
 
@@ -3151,17 +3330,15 @@ var maxProfit = function(prices) {
 * 子集
 * ......
 
-![image-20210201141604495](D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201141604495.png)
-
-
+<img src="前端算法与数据结构.assets\image-20210201141604495.png" alt="image-20210201141604495" style="zoom: 33%;" />
 
 ## 15-2 LeetCode：46. 全排列 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201131754977.png" alt="image-20210201131754977" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210201131754977.png" alt="image-20210201131754977" style="zoom:50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201141624316.png" alt="image-20210201141624316" style="zoom: 33%;" />
+<img src="前端算法与数据结构.assets\image-20210201141624316.png" alt="image-20210201141624316" style="zoom: 33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201141657537.png" alt="image-20210201141657537" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210201141657537.png" alt="image-20210201141657537" style="zoom:33%;" />
 
 ```js
 /**
@@ -3188,19 +3365,18 @@ var permute = function(nums) {
 };
 ```
 
-时间：O（n！） n！=1x2x3x...x(n-1)xn
+* 时间：O（n！） n！=1x2x3x...x(n-1)xn
+* 空间：O（n）
 
-空间：O（n）
-
-<img src="https://pic.leetcode-cn.com/0bf18f9b86a2542d1f6aa8db6cc45475fce5aa329a07ca02a9357c2ead81eec1-image.png" alt="image.png" style="zoom: 33%;" />
+<img src="前端算法与数据结构.assets/image-20210225202705884.png" alt="image-20210225202705884" style="zoom: 50%;" />
 
 ## 15-3 LeetCode：78. 子集 
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201133037705.png" alt="image-20210201133037705" style="zoom:50%;" />
+<img src="前端算法与数据结构.assets\image-20210201133037705.png" alt="image-20210201133037705" style="zoom:50%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201141643547.png" alt="image-20210201141643547" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210201141643547.png" alt="image-20210201141643547" style="zoom:33%;" />
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201141730435.png" alt="image-20210201141730435" style="zoom:33%;" />
+<img src="前端算法与数据结构.assets\image-20210201141730435.png" alt="image-20210201141730435" style="zoom:33%;" />
 
 ```js
 /**
@@ -3236,7 +3412,7 @@ var subsets = function (nums) {
 
 考虑选取子集的方法，对于输入nums，每次进入res的数组都是递增的
 
-<img src="D:\Users\Documents\[note]前端笔记\前端算法与数据结构.assets\image-20210201135602792.png" alt="image-20210201135602792" style="zoom: 50%;" />
+<img src="前端算法与数据结构.assets\image-20210201135602792.png" alt="image-20210201135602792" style="zoom: 50%;" />
 
 ```js
 /**
@@ -3259,3 +3435,87 @@ var subsets = function (nums) {
     return res;
 };
 ```
+
+# 第16章 设计模式
+
+## 16-1 设计原则
+
+<img src="前端算法与数据结构.assets/image-20210222145240875.png" alt="image-20210222145240875" style="zoom: 50%;" />
+
+<img src="前端算法与数据结构.assets/image-20210222145429481.png" alt="image-20210222145429481" style="zoom: 50%;" />
+
+## 16-2 设计模式
+
+工厂模式
+
+单例模式
+
+原型模式（关键是理解原型范式）
+
+装饰器模式
+
+适配器模式
+
+代理模式
+
+策略模式
+
+状态模式
+
+观察者模式/发布订阅模式
+
+迭代器模式
+
+## 16-3 发布订阅模式
+
+<img src="前端算法与数据结构.assets/image-20210222150733176.png" alt="image-20210222150733176" style="zoom:40%;" />
+
+### 实现一个EventEmitter
+
+> 题目描述：
+>
+> 1. 创建一个EventEmitter，承担全局事件总线功能
+> 2. 实现on事件监听方法
+> 3. 实现emit事件订阅方法 
+
+<img src="前端算法与数据结构.assets/image-20210222150936569.png" alt="image-20210222150936569" style="zoom: 67%;" />
+
+![image-20210222151029992](前端算法与数据结构.assets/image-20210222151029992.png)
+
+## 16-4 单例模式
+
+**单例模式：**保证一个类仅有一个实例，并提供一个访问它的全局访问点。
+
+**单例模式在前端的应用：**
+
+1. *实例化一个全局唯一的元素，确保样式一致。*比如说全局唯一的Alert、全局唯一的Modal等
+2. *实例化一个全局唯一的类。* 比如全局事件总线：一个上下文里只能有一个全局时间总线。
+
+**实现单例模式思路：使用闭包**
+
+借助闭包中的自由变量，保存对单例对象的引用，进而避免对象的重复创建。
+
+### 实现一个全局唯一的模态框
+
+> 题目描述：创建一个全局唯一的Modal弹层（模态框）
+
+```js
+//核心逻辑，采用闭包实现单例模式
+const createModal = (function(){
+    let modal = null;
+    return function(){
+        if(!modal){
+            modal = document.createElement('div');
+            modal.innerHTML = 'Modal模态框，全局唯一'
+            modal.id = 'modal';
+            modal.style.display = 'none';
+            document.bocy.appendChild(modal)
+        }
+        return modal;
+    }
+})()
+```
+
+<img src="前端算法与数据结构.assets/image-20210222152117431.png" alt="image-20210222152117431" style="zoom: 50%;" />
+
+<img src="前端算法与数据结构.assets/image-20210222151916315.png" alt="image-20210222151916315" style="zoom:50%;" />
