--- a/自我介绍等通用问题.md
+++ b/自我介绍等通用问题.md
@@ -9,17 +9,27 @@
 一个是作为小组长主导开发的线下教育系统项目
 一个是参与的关于国防地图服务发布与演示的科研项目
 
-在工作中，我尽量做好每一件事。
-
-在生活中，我对设计有一定的兴趣，有一定的UI基础，同时热爱分享与记录，喜欢摄影和画画。
+在工作中，我认真负责，尽量做好每一件事；在生活中，我对设计有一定的兴趣，有一定的UI基础，同时热爱分享与记录，喜欢摄影和画画。
 谢谢，以上是我的自我介绍。
 
 # 项目指导
+
+## 项目基本问题
 
 项目问题的话主要
 
 * 自己来讲干了什么，中间有什么问题，自己做了什么优化了什么？ 这个系统在代码方面有哪些不合理的地方？哪里可以继续优化？
 * 一般会让自己挑一个项目描述，我当时讲保障库多一点，一般就问做项目中遇到最大的问题是什么。还有一些设计架构，为什么这么设计…反正感觉项目主要靠自己吹 
+
+## **简历中的项目思考**
+
+![image-20210222155728539](自我介绍等通用问题.assets/image-20210222155728539.png)
+
+![image-20210222155756136](自我介绍等通用问题.assets/image-20210222155756136.png)
+
+![image-20210222155808901](自我介绍等通用问题.assets/image-20210222155808901.png)
+
+![image-20210222155847070](自我介绍等通用问题.assets/image-20210222155847070.png)
 
 # 项目1：OES
 
@@ -27,7 +37,7 @@
 
 当下，线下的中小型教育机构的报名和购课，请假和补课仍采用纸质登记的方式，为做到自动化，这个系统就是为这些中小型机构设计的。分为小程序端和PC端。
 
-分为五个角色：
+**需求分析：分为五个角色，再从每个角色的功能模块说**：
 
 * 平台管理员：所有入住机构的管理，审核和信息更新等。
 * 总管理员(老板)：管理员工，查看机构下教师和学生信息，查看数据统计模块等
@@ -59,7 +69,9 @@
 
 技术方面：
 
-**前端渲染，页面静态资源多，加载网站慢：**
+**问题1：前端渲染，页面静态资源多，加载网站慢：**
+
+**问题2：组件划分**
 
 解决：
 
@@ -102,25 +114,26 @@
 
 ## 设计架构
 
+**后台管理系统的特点**
+
+- 改变习惯成本低，兼容性要求不高
+- UI要求较低，开发效率要求较高，直接选用组件库快速开发即可
+- 对SEO无高要求
+
 **技术选型：**
 
-Vue+elementUI
+PC端：
 
-wx小程序API
+- 语言和框架：Vue2.6+Vue-Router + Sass+Element + ES6
+- 架构：前后端分离 + 分层架构 + 模块化开发（组件化开发）
+  * **组件化开发**：一个功能模块一个组件，无论是修改功能还是新增功能都好上手
+  * **每个角色都是一个单独的Vue工程：**一是因为静态资源多，功能负责，按角色分为多个Vue工程使得每个Vue工程会小一点，不同角色见不会重叠，例如一般管理员不需要加载教师的资源和文件。二是实验室协同开发，每人负责一个角色的子项目，便于开发。
+- 辅助工具：npm + Webpack + Git
+- 发布过程：环境部署（前端和后端各自一单独tomcat部署） -> 代码部署（实验室自部署Gitlab） -> nginx配置（没用） -> 域名解析（当前正在注册域名）
 
-**系统架构：**
+小程序端：
 
-* 小程序端的教师和学生分别是两个项目。
-
-* PC端平台管理员、机构管理员、教师和学生都是一个单独的Vue工程。
-
-考虑：
-
-一是因为静态资源多，功能负责，按角色分为多个Vue工程使得每个Vue工程会小一点，不同角色见不会重叠，例如一般管理员不需要加载教师的资源和文件。
-
-二是实验室协同开发，每人负责一个角色的子项目，便于开发。
-
-
+* wx小程序API
 
 下面收集面试时遇到的所有关于项目的问题
 
@@ -141,7 +154,7 @@ wx小程序API
 
 ## **3：CSS预处理器**
 
-less-loader
+less-loader sass-loader
 
 ## **4 ：哪些数据放在Vuex中，Vuex有哪些属性，项目中如何使用了Vuex**
 
@@ -270,9 +283,11 @@ web服务客户端软件。
    * 本系统的主要目的是方便用户进行针对不同类型的地理信息进行可视化展示。可以通过本系统来进行可视化操作。
    * 本系统主要包含了加载WMTS服务，WMS服务，WFS服务，WPS服务，打包下载，地名服务，目录与元数据服务等多个地理标准服务。
 
- (**OpenGIS Web Map Title Service)WMTS**提供了一种采用预定义图块方法发布数字地图服务的标准化解决方案，WMTS标砖定义了一些操作，这些操作允许用户访问切片地图。
+## 以WMS和WMTS为例
 
-![image-20210202224006249](D:\Users\Documents\[interview]面试准备\自我介绍等通用问题.assets\image-20210202224006249.png)
+ (**OpenGIS Web Map Title Service)WMTS**提供了一种采用预\\\\定义图块方法发布数字地图服务的标准化解决方案，WMTS标砖定义了一些操作，这些操作允许用户访问切片地图。
+
+<img src=".\自我介绍等通用问题.assets\image-20210202224006249.png" alt="image-20210202224006249" style="zoom:50%;" />
 
 ## 自己做了什么
 
@@ -292,13 +307,19 @@ web服务客户端软件。
 
 **技术方面：**
 
-因为是实验室历史项目，返回信息的格式有很多，有文本形式，还有xml描述文档，在前端解析比较复杂。
+* 返回信息的格式有很多，有文本形式，还有xml描述文档，JSON格式信息，GeoJSON等，在前端解析比较复杂。
+* 在网页浏览器中显示地图，WMS直接返回图像（较简单），WMTS返回切片，采用连接的方式加载瓦片（较复杂）
+
+解决: 一边学习一边实践，学习瓦片坐标的计算，阅读openlayers3瓦片加载源码。
+
+
 
 **非技术方面**
 
-web GIS入门的门槛高，项目结构复杂，难以上手。
+* web GIS入门的门槛高，项目结构复杂，难以上手。
+* 实验室历史项目，AngularJS
 
-解决：多问师兄师姐，先了解系统功能，再从功能入手看代码。
+解决：多问师兄师姐，先了解系统功能，再从需求功能修改入手看代码。
 
 ## 设计架构
 
